Illustratr: Fix wrong margin on toggled menu-item

--- a/illustratr/scss/_menu.scss
+++ b/illustratr/scss/_menu.scss
@@ -220,23 +220,31 @@ Menu
 				display: block;
 				padding: ($vspacing / 2) 0;
 				margin: 0;
-				min-height: $vspacing-double - 1px; // border-bottom-width
+				min-height: $vspacing-double - 2px;
 				border-bottom: 1px solid $lighter-color;
+				line-height: $vspacing - 2px;
 				a {
 					padding: 0;
 					@include hover(color, $darker-color);
 				}
 				> ul {
 					margin-top: ($vspacing / 2) - 2px;
-					margin-bottom: $vspacing / 2;
 				}
 				&.menu-item-has-children > ul > li:last-child {
-					padding-bottom: 0;
-					margin-bottom: $vspacing / 2;
+					padding-bottom: 1px;
+					margin-bottom: -1px;
 				}
 			}
 			.menu-item-has-children {
-				padding-bottom: 0;
+				&.toggle-on {
+					padding-bottom: 1px;
+					> .toggle-on {
+						margin-top: $vspacing / 2;
+					}
+				}
+				> a {
+					padding-right: $vspacing-double + ($vspacing / 2);
+				}
 			}
 			
 			// 2nd level
